--- a/index.html
+++ b/index.html
@@ -6,20 +6,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Labonee Portfolio</title>
+    <title>LaboneeAktar Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital@1&family=Roboto+Slab&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="half-width">
-        <h1>Welocme to My World !!</h1>
-        <h2>"LABONEE AKTAR BEJLY"</h2>
-        <h3>Let's see somthing about me</h3>
-        <p>Assalamualikum. My name is Most. Labonee Aktar Bejly. I am 22 years old. I am a student of Pundra
-            University of Science & Technology in department of Computer Science & Engineering. Today I create my
-            persional portfolio website. My name is Most. Labonee Aktar Bejly. I am 22 years old. I am a student of
-            Pundra University of Science & Technology in department of Computer Science & Engineering. Today I
-            create my persional portfolio website.</p> <br>
-        <a class="link-button" target="_blank" href="https://www.youtube.com/">HIRE ME</a>
-    </div>
+    <section>
+        <div class="half-width">
+            <h1>Welocme to My World !!</h1>
+            <h2>"LABONEE AKTAR BEJLY"</h2>
+            <h3>Let's see somthing about me</h3>
+            <p>Assalamualikum. My name is Most. Labonee Aktar Bejly. I am 22 years old. I am a student of Pundra
+                University of Science & Technology in department of Computer Science & Engineering. Today I create my
+                persional portfolio website. My name is Most. Labonee Aktar Bejly. I am 22 years old. I am a student of
+                Pundra University of Science & Technology in department of Computer Science & Engineering. Today I
+                create my persional portfolio website.</p> <br>
+            <a class="link-button" target="_blank" href="https://www.youtube.com/">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/my-pic.jpg" alt="">
+        </div>
+    </section>
 </body>
 
 </html>
