--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welocme to My World !!</h1>
             <h2>"LABONEE AKTAR BEJLY"</h2>
