--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
             <img src="images/my-pic.jpg" alt="">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/my-pic2.jpg" alt="">
+        </div>
+        <div class="half-width">
+            <h1>DREAM BIG</h1>
+            <h2>Become a Web Developer</h2>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+        </div>
+    </section>
 </body>
 
 </html>
