--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             <h1>DREAM BIG</h1>
             <h2>Become a Web Developer</h2>
             <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
-                to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+                to make simple website. My goal is to build 3 websites and learn advanced topics.</p> <br>
+            <a class="link-button" target="_blank" href="https://www.youtube.com/">DOWNNLOAD RESUME</a>
         </div>
     </section>
 </body>
