--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h1>Welocme to My World !!</h1>
             <h2>"LABONEE AKTAR BEJLY"</h2>
             <h3>Let's see somthing about me</h3>
-            <p>Assalamualikum. My name is Most. Labonee Aktar Bejly. I am 22 years old. I am a student of Pundra
+            <p>Assalamualaikum. My name is Most. Labonee Aktar Bejly. I am 22 years old. I am a student of Pundra
                 University of Science & Technology in department of Computer Science & Engineering. Today I create my
                 persional portfolio website. My name is Most. Labonee Aktar Bejly. I am 22 years old. I am a student of
                 Pundra University of Science & Technology in department of Computer Science & Engineering. Today I
@@ -46,9 +46,9 @@
     <section class="experience-area">
         <h1>Experiences</h1>
         <div class="flexible-container">
-            <div class="half-width">
+            <div id="full-stack" class="experience-item">
                 <h1>Full Stack Developer</h1>
-                <h3>2022-Present | Pro Level Developer</h3>
+                <h3 class="color">2022-Present | Pro Level Developer</h3>
                 <p>Web development is the work involved in developing a website for the Internet (World Wide Web) or an
                     intranet (a private network). I am the master of HTML, CSS and Javascript. I know everything needed
                     to
@@ -56,9 +56,9 @@
                     Javascript framework called Vue JS. I even know the deployment, server and security. I will give you
                     100% web solution.</p>
             </div>
-            <div class="half-width">
+            <div id="baby-web" class="experience-item">
                 <h1>Baby Web Developer</h1>
-                <h3>2022-2024 | Programming Hero Learner</h3>
+                <h3 class="color">2022-2024 | Programming Hero Learner</h3>
                 <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
                     showed
                     it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
@@ -66,5 +66,8 @@
         </div>
     </section>
 </body>
+<footer>
+    <p>© Labonee Aktar. 2022</p>
+</footer>
 
 </html>
